# poatan-corps

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
src/: cleanup.py  consults.py  helper.py  setup.py  stored_procedure.py  transaction.py  trigger.py
